# weather-poc

./: Cargo.toml  Database.Dockerfile  Dockerfile  README.md  justfile
migrations/: 20221202022210_weather_query_table.sql  20230131003825_create_monitored_zones_query_table.sql  20230201205916_create_locations_update_table.sql
resources/: application.yaml  local.yaml
src/: errors.rs  lib.rs  main.rs  server.rs  settings.rs
src/model/: frame.rs  mod.rs  registrar.rs  tracing_query.rs
src/model/agg_connect/: command_relay.rs  event_broadcast.rs  mod.rs
src/model/update/: errors.rs  mod.rs  protocol.rs  queries.rs  saga.rs  service.rs  zone_controller.rs
src/model/zone/: errors.rs  location.rs  mod.rs  protocol.rs  queries.rs  service.rs
src/model/zone/service/: app.rs  happy.rs  model.rs
src/queries/: broadcast.rs  mod.rs
src/server/: errors.rs  health_routes.rs  result.rs  state.rs  weather_routes.rs
src/server/queries/: mod.rs  monitored_zones.rs  weather.rs
src/services/: noaa.rs
src/settings/: tests.rs
tests/data/: application.yaml
tests/fixtures/: alerts.geojson
