[package]
name = "weather"
version = "0.1.0"
authors = ["Damon Rolfs <damon.rolfs@here.com>"]
edition = "2021"
repository = "https://main.gitlab.in.here.com/olp/narya/rust-cqrs-eventsourcing"
readme = "README.md"
keywords = ["cqrs", "eventsourced"]
categories = ["demo", "microservice"]

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs", features = ["envelope"] }
settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["database", "http"] }

cqrs-es = "0.4.5"
postgres-es = "0.4.5"

anyhow = "1.0.68"
approx = "0.5.1"
async-trait = "0.1.60"
axum = { version = "0.6.1", default_features = true, features = ["macros"] }
chrono = "0.4.23"
clap = { version = "4.0.32", default_features = true, features = ["derive"] }
config = "0.13.3"
either = "1.8.1"
enum_delegate = "0.2.0"
enumflags2 = { version = "0.7.5", features = ["serde"] }
futures = "0.3.25"
futures-util = "0.3.25"
geojson = "0.24.0"
governor = "0.5.1"
tower_governor = "0.0.3"
hyper = "0.14.23"
iso8601-timestamp = "0.2.7"
itertools = "0.10.5"
maplit = "1.0.2"
num_cpus = "1.15.0"
once_cell = "1.16.0"
prometheus = { version = "0.13.3", features = ["process"] }
prometheus-static-metric = "0.5.1"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
secrecy = "0.8.0"
sql_query_builder = { version = "1.0.2", features = ["postgresql"] }
serde = "1.0.151"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
serde_with = { version = "2.1.0", features = ["chrono", "json", "macros"] }
smol_str = "0.1.23"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full", "io-util", "tracing"] }
tower = { version = "0.4.13", features = ["timeout", "limit",] }
tower-http = { version = "0.3.5", features = [ "add-extension", "trace", "timeout", "compression-full", "decompression-full", "request-id" ] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
trim-margin = "0.1.0"
uom = "0.33.0"
url = { version = "2.3.1", features = ["serde"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
validator = { version = "0.16.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "postgres",
    "runtime-tokio-rustls",
    "json",
    "macros",
    "bigdecimal",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]


[dev-dependencies]
claim = { git = "https://github.com/dmrolfs/rust-claim", branch = "bump-autocfg-version" }
fake = { version = "2.5.0", features = ["chrono"] }
pretty_assertions = "1.3.0"
proptest = "1.0.0"
serde_test = "1.0.151"
temp-env = "0.3.1"
tokio-test = "0.4.2"
wiremock = "0.5.15"

# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang` [target.x86_64-unknown-linux-gnu]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# On MacOS, `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
